// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiLevelSelect /> should display display results when searching 1`] = `
<body>
  <div>
    <span
      class="wrapper"
      id="test-input-id"
    >
      <input
        autocomplete="off"
        class="baseStyles stealth"
        id="test-input-id-input"
        name="dropdown"
        placeholder="+Add"
        type="text"
        value="c2"
      />
      <span
        class="hiddenInputValue"
      />
    </span>
  </div>
  <div
    data-floating-ui-portal=""
    id="floating-ui-11"
  >
    <div
      class="overlay"
      data-testid="floating-overlay"
      style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      <div
        class="wrapper dropdown"
        style="left: 0px; position: absolute; top: 0px;"
      >
        <div
          class="wrapper isFocused searchInput"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="custom-field-dropdown-search-dropdown"
            name="custom-field-dropdown-search-dropdown"
            placeholder="Search"
            type="text"
            value="s1"
          />
          <span
            class="suffix"
          >
            <i
              class="material-icons icon searchClearIcon"
              tabindex="0"
            >
              close
            </i>
          </span>
        </div>
        <div
          class="wrapper"
        >
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="searchResultWrapper"
            >
              <span
                class="ellipsis"
              >
                s
                <strong>
                  s1
                </strong>
                
              </span>
              <small
                class="searchResultPath ellipsis"
              >
                
                <strong>
                  s1
                </strong>
                
              </small>
            </span>
          </button>
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="searchResultWrapper"
            >
              <span
                class="ellipsis"
              >
                ss3
              </span>
              <small
                class="searchResultPath ellipsis"
              >
                
                <strong>
                  s1
                </strong>
                
              </small>
            </span>
          </button>
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="searchResultWrapper"
            >
              <span
                class="ellipsis"
              >
                c1
              </span>
              <small
                class="searchResultPath ellipsis"
              >
                
                <strong>
                  s1
                </strong>
                 &gt; ss2
              </small>
            </span>
          </button>
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="searchResultWrapper"
            >
              <span
                class="ellipsis"
              >
                c2
              </span>
              <small
                class="searchResultPath ellipsis"
              >
                
                <strong>
                  s1
                </strong>
                 &gt; ss2
              </small>
            </span>
            <span
              class="material-icons checkIcon"
            >
              check
            </span>
          </button>
        </div>
        <div
          class="wrapper modalFooter"
        >
          <button
            aria-disabled="false"
            class="wrapper clearButton ghost primary medium"
            type="button"
          >
            <span>
              Clear Selection
            </span>
          </button>
        </div>
        <div
          class="applyButtonContainer"
        >
          <button
            aria-disabled="false"
            class="wrapper ghost primary medium"
            type="button"
          >
            <span>
              Apply
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MultiLevelSelect /> should render the dropdown component correctly 1`] = `
<body>
  <div>
    <span
      class="wrapper"
      id="test-input-id"
    >
      <input
        autocomplete="off"
        class="baseStyles stealth"
        id="test-input-id-input"
        name="dropdown"
        placeholder="+Add"
        type="text"
        value="c2"
      />
      <span
        class="hiddenInputValue"
      />
    </span>
  </div>
  <div
    data-floating-ui-portal=""
    id="floating-ui-0"
  >
    <div
      class="overlay"
      data-testid="floating-overlay"
      style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      <div
        class="wrapper dropdown"
        style="left: 0px; position: absolute; top: 0px;"
      >
        <div
          class="wrapper searchInput"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="custom-field-dropdown-search-dropdown"
            name="custom-field-dropdown-search-dropdown"
            placeholder="Search"
            type="text"
            value=""
          />
        </div>
        <div
          class="wrapper"
        >
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="choiceButton"
            >
              <span
                class="ellipsis"
              >
                Option 3
              </span>
              <span
                class="material-icons nextIcon"
              >
                navigate_next
              </span>
            </span>
          </button>
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="choiceButton"
            >
              <span
                class="ellipsis"
              >
                Option 1
              </span>
            </span>
          </button>
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="choiceButton"
            >
              <span
                class="ellipsis"
              >
                Option 2
              </span>
            </span>
          </button>
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="choiceButton"
            >
              <span
                class="ellipsis"
              >
                0
              </span>
            </span>
          </button>
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="choiceButton"
            >
              <span
                class="ellipsis"
              >
                1
              </span>
            </span>
          </button>
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="choiceButton"
            >
              <span
                class="ellipsis"
              >
                123
              </span>
            </span>
          </button>
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="choiceButton"
            >
              <span
                class="ellipsis"
              >
                Yes
              </span>
            </span>
          </button>
          <button
            class="item"
            role="option"
            tabindex="0"
          >
            <span
              class="choiceButton"
            >
              <span
                class="ellipsis"
              >
                No
              </span>
            </span>
          </button>
        </div>
        <div
          class="wrapper modalFooter"
        >
          <button
            aria-disabled="false"
            class="wrapper clearButton ghost primary medium"
            type="button"
          >
            <span>
              Clear Selection
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
